force-app/main/default/objects/Blakeney_Setting__mdt/Blakeney_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Blakeney AI agent configuration</description>
    <label>Blakeney Setting</label>
    <pluralLabel>Blakeney Settings</pluralLabel>
</CustomObject>