force-app/main/default/objects/Blakeney_Setting__mdt/fields/AWS_Bucket_Name__c.field-meta.xml
<CustomField>
    <fullName>AWS_Bucket_Name__c</fullName>
    <label>AWS Bucket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>