force-app/main/default/objects/Blakeney_Setting__mdt/fields/AWS_Host__c.field-meta.xml
<CustomField>
    <fullName>AWS_Host__c</fullName>
    <label>AWS Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>