force-app/main/default/objects/Blakeney_Setting__mdt/fields/AWS_Secret_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Secret_Key__c</fullName>
    <label>AWS Secret Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>