force-app/main/default/objects/Blakeney_Setting__mdt/fields/Cost_Tracking_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Cost_Tracking_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cost Tracking Enabled</label>
    <type>Checkbox</type>
</CustomField>