force-app/main/default/objects/Blakeney_Setting__mdt/fields/Fallback_Message__c.field-meta.xml
<CustomField>
    <fullName>Fallback_Message__c</fullName>
    <label>Fallback Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>