force-app/main/default/objects/Blakeney_Setting__mdt/fields/Max_History_Messages__c.field-meta.xml
<CustomField>
    <fullName>Max_History_Messages__c</fullName>
    <label>Max History Messages</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>