force-app/main/default/objects/Blakeney_Setting__mdt/fields/Session_Timeout_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Session_Timeout_Minutes__c</fullName>
    <label>Session Timeout Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>